Committed for Prince Kumar

--- a/OnlineQuizPages/NewRegistration.html
+++ b/OnlineQuizPages/NewRegistration.html
@@ -6,7 +6,7 @@
 <body>
 <form action="" method="post" class="elegant-aero">
     <h1>Registration Form 
-        <span>Please fill all the texts in the fields.</span>
+        <span>Please fill all the text boxes in the fields.</span>
     </h1>
     <label>
         <span>First Name :</span>
