Commited for shashikant

--- a/OnlineQuizPages/NewRegistration.html
+++ b/OnlineQuizPages/NewRegistration.html
@@ -62,7 +62,7 @@
     </label>    
      <label>
         <span>&nbsp;</span> 
-        <input type="button" class="button" value="Submit"  /> 
+        <input type="button" class="button" value="Submit" onclick="validation.js();" /> 
 		
 		<span>&nbsp;</span> 
         <input type="button" class="button" value="Reset" /> 
